--- a/po/wesnoth-l/it.po
+++ b/po/wesnoth-l/it.po
@@ -1,11 +1,11 @@
 # translation of it.po to Italian
-# Antonio Rosella <arosella@yahoo.com>, 2010-2017
+# Antonio Rosella <arosella@yahoo.com>, 2010-2019
 msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-27 09:23 UTC\n"
-"PO-Revision-Date: 2019-01-28 21:21+0100\n"
+"PO-Revision-Date: 2019-02-12 20:50+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: none\n"
 "Language: it\n"
@@ -672,6 +672,10 @@ msgid ""
 "sent ahead for the magistrate, Relana, to meet them in a secluded strath in "
 "the swamps."
 msgstr ""
+"Temendo che l’esercito della regina potesse ritornare in forze sulle tracce "
+"della pattuglia scomparsa, Baldras e i suoi uomini fuggirono da Dallben. Si "
+"diressero verso Delwyn in cerca di Relana, il magistrato, per proporre un "
+"incontro in un luogo sicuro nel mezzo delle paludi."
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:22
@@ -679,6 +683,7 @@ msgid ""
 "As morning dawned over the day after next, they found Relana already waiting "
 "for them."
 msgstr ""
+"All’alba del giorno successivo, trovarono Relana che li stava già aspettando."
 
 #. [side]: type=Highwayman_Peasant, id=Relana
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:49
@@ -2599,7 +2604,7 @@ msgstr ""
 "Pochi umani hanno penetrato i segreti della magia bianca e di quella nera, "
 "mantenendo intatta la sanità mentale. Quelli che riescono a governare questo "
 "equilibrio diventano Signori delle ombre, che non esistono pienamente né nel "
-"mondo dellla luce né in quello dell’oscurità. Senza più necessità di armi "
+"mondo della luce né in quello dell’oscurità. Senza più necessità di armi "
 "fisiche, sono temuti allo stesso modo dai nemici e dai loro sottoposti."
 
 #. [attack]: type=blade
