--- a/po/wesnoth-sotbe/it.po
+++ b/po/wesnoth-sotbe/it.po
@@ -1,12 +1,12 @@
 # translation of it.po to Italian
-# Antonio Rosella <arosella@yahoo.com>, 2012-2018.
+# Antonio Rosella <arosella@yahoo.com>, 2012-2019.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 0.8.11-CVS\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-27 09:23 UTC\n"
-"PO-Revision-Date: 2018-09-09 18:13+0200\n"
+"PO-Revision-Date: 2019-02-09 11:29+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italian <>\n"
 "Language: it\n"
@@ -14,7 +14,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n!=1);\n"
-"X-Generator: Poedit 2.1.1\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [campaign]: id=Son_of_the_Black-Eye
 #: data/campaigns/Son_Of_The_Black_Eye/_main.cfg:9
@@ -189,12 +189,6 @@ msgstr "Umani"
 
 #. [part]
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/01_End_of_Peace.cfg:98
-#, fuzzy
-#| msgid ""
-#| "Rahul I, Lord Protector of the Northern Alliance, concluded peace with "
-#| "enemy orcs during the fourth year of his leadership. He ended a 15-year "
-#| "war with Black-Eye Karun, ruler of the enemy orcs. A peace treaty between "
-#| "the Alliance and the orcs settled their territorial disputes."
 msgid ""
 "Rahul I, Lord Protector of the Northern Alliance, concluded peace with enemy "
 "orcs during the fourteenth year of his leadership. He ended a 15-year war "
@@ -202,7 +196,7 @@ msgid ""
 "Alliance and the orcs settled their territorial disputes."
 msgstr ""
 "Rahul I, capo supremo dell’Alleanza del Nord, concluse la pace con gli orchi "
-"nel 4° anno del suo regno. Pose fine ad una guerra durata 15 anni con Karun "
+"nel 14° anno del suo regno. Pose fine ad una guerra durata 15 anni con Karun "
 "Occhionero, sovrano degli orchi nemici. Un trattato di pace tra l’Alleanza e "
 "gli orchi mise fine alle dispute territoriali."
 
@@ -462,36 +456,26 @@ msgstr "Sconfiggi Lanbec’h"
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:31
-#, fuzzy
-#| msgid "Resist until your people are ready to go (Turn 12)"
 msgid "Resist until your people are ready to go (turn 12)"
 msgstr "Resisti finché la tua gente è pronta a partire (Turno 12)"
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:34
-#, fuzzy
-#| msgid "Resist until your people are ready to go (Turn 13)"
 msgid "Resist until your people are ready to go (turn 13)"
 msgstr "Resisti finché la tua gente è pronta a partire (Turno 13)"
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:37
-#, fuzzy
-#| msgid "Resist until your people are ready to go (Turn 14)"
 msgid "Resist until your people are ready to go (turn 14)"
 msgstr "Resisti finché la tua gente è pronta a partire (Turno 14)"
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:45
-#, fuzzy
-#| msgid "Then move Kapou’e to the signpost in the Northeast"
 msgid "Then move Kapou’e to the signpost in the northeast"
 msgstr "Sposta Kapou’e al cartello a nord-est"
 
 #. [objective]: condition=win
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/02_The_Human_Army.cfg:52
-#, fuzzy
-#| msgid "Move Kapou’e to the signpost in the Northeast"
 msgid "Move Kapou’e to the signpost in the northeast"
 msgstr "Sposta Kapou’e al cartello a nord-est"
 
@@ -4031,8 +4015,6 @@ msgstr "Buongiorno, Shan Taum!"
 
 #. [message]: speaker=Shan Taum
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/16_The_Coward.cfg:204
-#, fuzzy
-#| msgid "What... Kapou’e! What in the frozen northlands are you doing here?!"
 msgid "What... Kapou’e! What in the frozen Northlands are you doing here?!"
 msgstr ""
 "Cosa... Kapou’e! Che diavolo ci fai qua tra le terre ghiacciate del nord?!"
@@ -4290,12 +4272,6 @@ msgstr ""
 
 #. [message]: speaker=Howgarth III
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/17_The_Human_Attack.cfg:459
-#, fuzzy
-#| msgid ""
-#| "The hell I don’t, Earl Lanbec’h, the Northern Alliance was witness to a "
-#| "treaty some twenty seven years ago between your people and the orcs, "
-#| "which both of you are no doubt violating. It is our duty as the "
-#| "orchestrator and witness of this treaty to see that it is honored."
 msgid ""
 "The hell I don’t, Earl Lanbec’h, the Northern Alliance was witness to a "
 "treaty some seventeen years ago between your people and the orcs, which both "
@@ -4303,7 +4279,7 @@ msgid ""
 "witness of this treaty to see that it is honored."
 msgstr ""
 "Al diavolo se non lo farò, conte Lanbec’h, l’Alleanza del Nord è stata "
-"testimone circa ventisette anni fa di un trattato tra la tua gente e gli "
+"testimone circa diciassette anni fa di un trattato tra la tua gente e gli "
 "orchi, trattato che ora di sicuro state violando tutti e due. È nostro "
 "compito, come mediatori e testimoni di questo trattato di verificare che sia "
 "onorato."
@@ -4347,17 +4323,12 @@ msgstr "Ma di cosa diavolo stai parlando?"
 
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/17_The_Human_Attack.cfg:486
-#, fuzzy
-#| msgid ""
-#| "I am Kapou’e, son of the Black-Eye Karun. Twenty-seven years ago you "
-#| "people assassinated my father after inviting him to join the Northern "
-#| "Alliance."
 msgid ""
 "I am Kapou’e, son of the Black-Eye Karun. Seventeen years ago you people "
 "assassinated my father after inviting him to join the Northern Alliance."
 msgstr ""
-"Sono Kapou’e, figlio di Karun Occhionero. Ventisette anni fa la tua gente ha "
-"assassinato mio padre dopo averlo invitato a unirsi all’Alleanza del Nord."
+"Sono Kapou’e, figlio di Karun Occhionero. Diciassette anni fa la tua gente "
+"ha assassinato mio padre dopo averlo invitato a unirsi all’Alleanza del Nord."
 
 #. [message]: speaker=Howgarth III
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/17_The_Human_Attack.cfg:492
