--- a/po/wesnoth-units/it.po
+++ b/po/wesnoth-units/it.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-27 09:23 UTC\n"
-"PO-Revision-Date: 2019-01-24 20:36+0100\n"
+"PO-Revision-Date: 2019-02-15 19:05+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italian <>\n"
 "Language: it\n"
@@ -2229,16 +2229,6 @@ msgstr "Elfo arciere"
 
 #. [unit_type]: id=Elvish Archer, race=elf
 #: data/core/units/elves/Archer.cfg:19
-#, fuzzy
-#| msgid ""
-#| "As primarily foragers and hunters, most elves learn to become proficient "
-#| "archers from a young age. Besides being only a practical skill, archery "
-#| "is also a common pasttime and many competitions are held in sport for the "
-#| "entertainment of spectators and participants alike. This ability is "
-#| "readily turned to battle in times of war, where many elves will wield "
-#| "bows as their weapons of choice. Though not as sturdy as their human or "
-#| "orc counterparts, Elvish archers are still effective combatants, "
-#| "especially when fighting from the safety of their forests."
 msgid ""
 "As primarily foragers and hunters, most elves learn to become proficient "
 "archers from a young age. Besides being only a practical skill, archery is "
@@ -2251,14 +2241,14 @@ msgid ""
 msgstr ""
 "Essendo principalmente cacciatori e procacciatori di cibo, molti elfi hanno "
 "imparato da essere eccellenti arceri fin dalla più tenera età. Oltre ad "
-"essere una mera abilità pratica, l'arte dell'arco è anche un passatempo "
+"essere una mera abilità pratica, l’arte dell’arco è anche un passatempo "
 "comune, e molti tornei sportivi vengono indetti per il divertimento sia "
 "degli spettatori che anche dei partecipanti stessi. In tempo di guerra, "
 "questa abilità viene portata direttamente su campi di battaglia, dove molti "
 "elfi imbracceranno gli archi e li sceglieranno come arma principale. Sebbene "
 "non siano robusti quanto le loro controparti umane o orchesche, gli elfi "
-"arceri elfici rimando dei combattenti efficaci, specialmente quando "
-"combattono al riparo delle loro foreste."
+"arceri rimangono dei combattenti efficaci, specialmente quando combattono al "
+"riparo delle loro foreste."
 
 #. [female]
 #: data/core/units/elves/Archer.cfg:80
@@ -2341,10 +2331,10 @@ msgid ""
 msgstr ""
 "Gli elfi capitani di solito guidano pattuglie e comandano guarnigioni che "
 "stazionano a guardia di ampie foreste in territorio elfico. E differenza dei "
-"comandanti di altre razze, sono molto abili nel condurre piccole shcermagli "
+"comandanti di altre razze, sono molto abili nel condurre piccole schermaglie "
 "piuttosto che battaglie su larga scala, e sono specializzati in manovre "
 "difensive. I capitani tipicamente comandano piccole unità che rimangono "
-"insieme per un lungo perido di tempo, e ciò permette loro di addestrare "
+"insieme per un lungo periodo di tempo, e ciò permette loro di addestrare "
 "personalmente e fare amicizia con le loro truppe. Vengono spesso visti "
 "comandare tramite il cameratismo e l’amicizia, mantenendo comunque un grande "
 "rispetto tra gli altri elfi."
@@ -2374,7 +2364,7 @@ msgstr ""
 "godimento. Naturalmente, la maggior parte di questi guerrieri vivono brevi "
 "vite dedicate ad onorare l’arte della spada nel tentativo di conquistare i "
 "campi di battaglia: solo i più talentuosi sono in grado di sopravvivere al "
-"combattimento costante e guadagnare il titolo di '“Campione”. Dopo aver "
+"combattimento costante e guadagnare il titolo di “Campione”. Dopo aver "
 "trascorso tutta la loro vita ad affinare la loro abilità con la lama, questi "
 "elfi sono eccezionalmente pericolosi e non dovrebbero mai essere "
 "sottovalutati."
@@ -2447,8 +2437,8 @@ msgstr ""
 "pattuglie di frontiera, che servono principalmente come guardiani delle "
 "foreste e più occasionalmente come piccole squadre di incursori in altri "
 "territori. L’arte scherma elfica è famosa per porre in enfasi su colpi "
-"rapidi ed veloci, utilizzanndo meno forza rispetto ai guerrieri umani o "
-"orchescchi, ma anche lasciando meno tempo per reagire e controbattere. La "
+"rapidi ed veloci, utilizzando meno forza rispetto ai guerrieri umani o "
+"orcheschi, ma anche lasciando meno tempo per reagire e controbattere. La "
 "maggior parte degli elfi può imparare le basi della scherma relativamente "
 "rapidamente e sarà pronto a brandire lama quando si affronta una battaglia."
 
@@ -2478,7 +2468,7 @@ msgid ""
 msgstr ""
 "I guerrieri elfici al termine del loro percorso di crescita sono talvolta "
 "chiamati “Sárcan”, che approssimativamente significa “colui che ha "
-"sacrificato in difesa” o anche “trasfigurato dall'esperienza”. Tradotto "
+"sacrificato in difesa” o anche “trasfigurato dall’esperienza”. Tradotto "
 "spesso nella lingua umana con “Eroe degli elfi”, questo nome indica un "
 "discreto livello di stima e prestigio, ma non è usato per glorificare la "
 "posizione che questi elfi detengono. Gli eroi elfici sono quelli che sono "
@@ -2486,7 +2476,7 @@ msgstr ""
 "caduti in battaglie precedenti. Hanno visto ogni sorta di atrocità commesse "
 "da tutte le razze, siano essi orchi o gli esseri umani che devastano la "
 "bellezza naturale delle foreste, o anche la loro stessa specie, altri elfi "
-"che non disdegnao macellare persone innocenti per orgoglio e vendetta. I "
+"che non disdegnano macellare persone innocenti per orgoglio e vendetta. I "
 "molti anni di combattimenti rendono naturalmente questi spadaccini altamente "
 "qualificati nel combattimento in mischia, ma le difficoltà e la distruzione "
 "provocate dalla guerra gravano pesantemente sia sullo spirito che sul corpo. "
@@ -2573,12 +2563,12 @@ msgstr ""
 "richiede un notevole merito personale e una profonda comprensione di tutti i "
 "tipi di elfo, siano essi guerriero, mistico, o pacifista.\n"
 "\n"
-"Molti elfi iniziano l’addestramento nel tiro con l'arco e la scherma in "
+"Molti elfi iniziano l’addestramento nel tiro con l’arco e la scherma in "
 "giovane età, e gli adolescenti di lignaggio appropriato più promettenti sono "
 "selezionati per studiare sotto incantatrici che hanno dominato le arti "
 "mistiche. Poiché la natura della magia delle fate si addice più agli elfi "
 "femminili che ai maschi, solo i più talentuosi imparano a domare la fugace "
-"via delle fate e si collegano al mondo dell'arcano. Quelli che dimostrano il "
+"via delle fate e si collegano al mondo dell’arcano. Quelli che dimostrano il "
 "loro coraggio personale in scherma e stregoneria deve poi imparare ad "
 "applicare saggiamente i loro nuovi poteri, perché il violento conflitto è "
 "qualcosa di non essere preso alla leggera, e solo perché una battaglia può "
@@ -2609,11 +2599,11 @@ msgstr ""
 "di una piccola quantità di magia e garantisce loro sensi estremamente acuti. "
 "Questo, combinato con anni di caccia nelle foreste profonde, rende gli elfi "
 "incredibilmente acuti, un dono che contribuisce notevolmente alla loro "
-"maestria dell'arco. Un elfo allenato al tiro con l'arco è in grado di "
+"maestria dell’arco. Un elfo allenato al tiro con l’arco è in grado di "
 "colpire un bersaglio grande come una capocchia di spillo da centinaia di "
 "passi di distanza e può scagliare frecce in modo rapido e preciso tanto da "
 "spezzare in volo un ramo che cade. Naturalmente, allenare il corpo per stare "
-"al passo con gli occhi non è un'impresa facile, e sviluppare questa "
+"al passo con gli occhi non è un’impresa facile, e sviluppare questa "
 "prodigiosa abilità porta con se lo scotto di una certa debolezza nel "
 "combattimento ravvicinato."
 
@@ -2714,10 +2704,10 @@ msgstr ""
 "Osservatori silenziosi delle foreste, i ranger sono maestri di furtività e "
 "ricognizione. Molti sono esploratori e solitari, preferendo viaggiare da "
 "soli lungo i sentieri tra gli alberi torreggianti e tra la naturale bellezza "
-"incontaminata delle loro case, di cui sono ferocemi protettori. Sebbene "
-"possiedano una notevole abilità sia con la spada che con ’larco, i ranger "
+"incontaminata delle loro case, di cui sono feroci protettori. Sebbene "
+"possiedano una notevole abilità sia con la spada che con l’arco, i ranger "
 "sono un po’ meno abili nel combattere di altri guerrieri a parità di "
-"condizioni, preferendo invece tendere un'imboscata ai loro nemici dall’ombra "
+"condizioni, preferendo invece tendere un’imboscata ai loro nemici dall’ombra "
 "dei boschi. Un attacco a sorpresa dei ranger può paralizzare anche una forza "
 "molte volte più numerosa di loro, e gli eserciti che attaccano spesso "
 "scelgono di ritirarsi piuttosto che rischiare un gioco di guerriglia con i "
@@ -2762,7 +2752,7 @@ msgstr ""
 "cavalleria, e sono abbastanza tenaci da cavalcare anche per due o tre giorni "
 "di seguito senza riposare. Sebbene il servizio di informazione e "
 "comunicazione fornito da questi cavalieri sia inestimabile per le tattiche "
-"elfiche, la mancanza di abilità nel combattimento e l'impegno in prima linea "
+"elfiche, la mancanza di abilità nel combattimento e l’impegno in prima linea "
 "implica che i cavalieri elfici sian spesso gli eroi sconosciuti della "
 "guerra, relegandoli ad un ruolo di sostegno ai loro fratelli dalle retrovie."
 
@@ -2849,13 +2839,13 @@ msgstr ""
 "Sebbene non sia un titolo formale, “Maestro di tiro” è l’epiteto dato ai "
 "tiratori elfici più dotati. Questi arcieri esperti sono capaci di prodezze "
 "che, anche secondo gli standard elfici, sono al limite del miracoloso: hanno "
-"la precisione di dividere le frecce in arrivo a mezz'aria e possono "
+"la precisione di dividere le frecce in arrivo a mezz’aria e possono "
 "scagliare una seconda freccia prima che la precedente abbia colpito il "
 "bersaglio, tutto mantenendo una potenza sufficiente a perforare un’armatura "
 "d’acciaio. Basta una sola scarica delle loro frecce per abbattere un "
 "cavaliere a cavallo, e anche la fanteria pesante corazzata sopravviverà a "
 "pochi colpi aggiuntivi. I maestri di tiro degli elfi hanno portato la loro "
-"arte alla sua più alta forma e sono i maestri indiscussi del tiro con l'arco."
+"arte alla sua più alta forma e sono i maestri indiscussi del tiro con l’arco."
 
 #. [female]
 #: data/core/units/elves/Sharpshooter.cfg:81
