--- a/po/wesnoth/zh_TW.po
+++ b/po/wesnoth/zh_TW.po
@@ -1,23 +1,24 @@
+# The Battle for Wesnoth - Traditional Chinese Translations
+# Copyright (C) 2005-2019 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
-# Automatically generated, 2005.
 # 楊綮銘 <steven2880@gmail.com>, 2008.
-# Li, Kwunron <likwueron>2018.
+# 李昆融 <likwueron@gmail.com>, 2018.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: wesnoth 1.12.1\n"
+"Project-Id-Version: wesnoth-1.14\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-27 12:23+0300\n"
-"PO-Revision-Date: 2018-06-17 21:49+0800\n"
+"PO-Revision-Date: 2019-02-16 23:24+0800\n"
 "Last-Translator: 楊綮銘 <steven2880@gmail.com>\n"
-"Language-Team: Chinese/Traditional <steven2880@gmail.com>\n"
+"Language-Team: Wesnoth Traditional Chinese Team\n"
 "Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n>1);\n"
 "X-Poedit-SourceCharset: UTF-8\n"
-"X-Generator: Poedit 2.0.8\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [multiplayer_side]: id=Custom
 #: data/_main.cfg:22
@@ -4028,22 +4029,22 @@ msgstr "螢幕截圖"
 #. [fonts]
 #: data/hardwired/fonts.cfg:28
 msgid "Lato"
-msgstr "Lato"
+msgstr "Lato,DejaVu Sans,Andagii,Droid Sans Fallback"
 
 #. [fonts]
 #: data/hardwired/fonts.cfg:29
 msgid "DejaVu Sans Mono"
-msgstr "DejaVu Sans Mono"
+msgstr "DejaVu Sans Mono,Droid Sans Fallback"
 
 #. [fonts]
 #: data/hardwired/fonts.cfg:30
 msgid "Lato Light"
-msgstr "Lato Light"
+msgstr "Lato Light,Droid Sans Fallback"
 
 #. [fonts]
 #: data/hardwired/fonts.cfg:31
 msgid "Oldania ADF Std"
-msgstr "Oldania ADF Std"
+msgstr "Oldania ADF Std,Droid Sans Fallback"
 
 #. [fonts]
 #: data/hardwired/fonts.cfg:36
@@ -4061,7 +4062,7 @@ msgstr ""
 #. [lua]: wesnoth.deprecate_api
 #: data/lua/core.lua:187
 msgid "(Note: You should use $replacement instead in new code)"
-msgstr "(備註：你應該使用 $replacement 而不是新的程式碼)"
+msgstr "（備註：你應該使用 $replacement 而不是新的程式碼）"
 
 #. #-#-#-#-#  wesnoth.wml.pot (PACKAGE VERSION)  #-#-#-#-#
 #. [lua]: wesnoth.deprecate_api
@@ -5750,7 +5751,7 @@ msgstr "%A, %H:%M"
 
 #: src/format_time_summary.cpp:57
 msgid "%A, %I:%M %p"
-msgstr "%A, %H:%M"
+msgstr "%A, %I:%M %p"
 
 #: src/format_time_summary.cpp:61
 msgid "%b %d"
@@ -6410,7 +6411,7 @@ msgstr "<header>text='擁有此效果的單位'</header>"
 
 #: src/help/help_impl.cpp:555
 msgid "<header>text='Units with this ability'</header>"
-msgstr "<header>text='擁有這個技能的單位：'</header>"
+msgstr "<header>text='擁有這個技能的單位'</header>"
 
 #: src/help/help_impl.cpp:585
 msgid "Era:"
@@ -6422,7 +6423,7 @@ msgstr "陣營"
 
 #: src/help/help_impl.cpp:642
 msgid "Races: "
-msgstr "種族"
+msgstr "種族："
 
 #: src/help/help_impl.cpp:651 src/help/help_impl.cpp:1001
 msgid "Alignments: "
@@ -6442,7 +6443,7 @@ msgstr "沒有資料。"
 
 #: src/help/help_impl.cpp:732 src/help/help_impl.cpp:734
 msgid "Availability: "
-msgstr "可用性"
+msgstr "可用性："
 
 #: src/help/help_impl.cpp:732
 msgid "Must-have"
@@ -6515,7 +6516,7 @@ msgstr "變種："
 
 #: src/help/help_topic_generators.cpp:402 src/reports.cpp:203
 msgid "Race: "
-msgstr "種族"
+msgstr "種族："
 
 #: src/help/help_topic_generators.cpp:439
 #: src/help/help_topic_generators.cpp:462
@@ -6524,7 +6525,7 @@ msgstr "特質"
 
 #: src/help/help_topic_generators.cpp:472
 msgid "Abilities: "
-msgstr "技能"
+msgstr "技能："
 
 #: src/help/help_topic_generators.cpp:490
 msgid "Ability Upgrades: "
@@ -7113,11 +7114,11 @@ msgstr "無法找到含有‘$search’字串的標籤或單位。"
 
 #: src/menu_events.cpp:1416
 msgid "Can't droid invalid side: '$side'."
-msgstr "無法關閉/啟用無效陣營：'$side'的AI。"
+msgstr "無法關閉/啟用無效陣營：'$side'。"
 
 #: src/menu_events.cpp:1421
 msgid "Can't droid networked side: '$side'."
-msgstr "無法關閉/啟用網絡陣營：'$side' 的AI。"
+msgstr "無法關閉/啟用網絡陣營：'$side'。"
 
 #: src/menu_events.cpp:1427
 msgid "Side '$side' is already droided."
@@ -7133,7 +7134,7 @@ msgstr ""
 
 #: src/menu_events.cpp:1447
 msgid "Can't droid a local ai side: '$side'."
-msgstr "無法關閉/啟用本地AI陣營：'$side' 的AI。"
+msgstr "無法關閉/啟用本地AI陣營：'$side'。"
 
 #: src/menu_events.cpp:1463
 msgid "Can't idle invalid side: '$side'."
@@ -7472,7 +7473,7 @@ msgstr "能力： "
 
 #: src/reports.cpp:428 src/reports.cpp:873
 msgid " (inactive)"
-msgstr " (遲緩)"
+msgstr " （遲緩）"
 
 #: src/reports.cpp:480
 msgid "Resistances: "
@@ -7698,7 +7699,7 @@ msgstr "回合倒數"
 
 #: src/save_index.cpp:218
 msgid "%a %b %d %I:%M %p %Y"
-msgstr "%a %b %d %H:%M %Y"
+msgstr "%a %b %d %I:%M %p %Y"
 
 #: src/save_index.cpp:219
 msgid "%a %b %d %H:%M %Y"
@@ -8188,32 +8189,13 @@ msgstr "對 $player 隱藏計劃"
 msgid "Whiteboard Options"
 msgstr "白板選項"
 
-#~ msgid "Alternate Wesnoth Server"
-#~ msgstr "非官方伺服器"
-
-#~ msgid ""
-#~ "In many campaign scenarios, you may issue simple instructions for your "
-#~ "computer-controlled allies using the right-click context menu."
-#~ msgstr "在許多戰役或章節中，你可以透過右鍵選單對盟友下達簡單指令。"
-
-#~ msgid "An invalid defender weapon got selected."
-#~ msgstr "無效的防禦。"
-
-#~ msgid "Advances to:"
-#~ msgstr "升級為： "
-
-#~ msgid "(this turn left)"
-#~ msgid_plural "(%d turns left)"
-#~ msgstr[0] "(只剩下本回合)"
-#~ msgstr[1] "(只剩下%d回合)"
-
 #~ msgid "Ping timeout"
 #~ msgstr "連線逾時"
 
 #~ msgid ""
 #~ "Number of seconds to wait for a ping reply before timing out. Set to 0 to "
 #~ "disable"
-#~ msgstr "等待幾秒後默認逾時。設定為0則取消此功能。"
+#~ msgstr "等待幾秒後默認逾時。設定為0則取消此功能"
 
 #~ msgid ""
 #~ "Wesnoth has many different sagas waiting to be played. Fight to regain "
@@ -8249,6 +8231,22 @@ msgstr "白板選項"
 #~ "7個陣營在46張多人地圖/章節上互戰，\n"
 #~ "500多個模組。)"
 
+#~ msgid "Alternate Wesnoth Server"
+#~ msgstr "非官方伺服器"
+
+#~ msgid "(this turn left)"
+#~ msgid_plural "(%d turns left)"
+#~ msgstr[0] "(只剩下本回合)"
+#~ msgstr[1] "(只剩下%d回合)"
+
+#~ msgid ""
+#~ "In many campaign scenarios, you may issue simple instructions for your "
+#~ "computer-controlled allies using the right-click context menu."
+#~ msgstr "在許多戰役或章節中，你可以透過右鍵選單對盟友下達簡單指令。"
+
+#~ msgid "An invalid defender weapon got selected."
+#~ msgstr "無效的防禦。"
+
 #~ msgid "$era_name (missing)"
 #~ msgstr "$era_name （遺失）"
 
@@ -8263,6 +8261,9 @@ msgstr "白板選項"
 
 #~ msgid "none"
 #~ msgstr "無"
+
+#~ msgid "Advances to:"
+#~ msgstr "升級為： "
 
 #~ msgid "None"
 #~ msgstr "無"
